Dialogue trees and multi-dialogue question functionality Retooled global storage and object tracking to be localised to Farm map

--- a/SecretBase/i18n/default.json
+++ b/SecretBase/i18n/default.json
@@ -1,5 +1,5 @@
 ﻿{
-    "template.start": "Started {{mod}} from folder: {{folder}}",
+    "look.at.those.tokens": "Started {{mod}} from folder: {{folder}}",
 
     "laptop.menuprompt": "Do what?",
     "laptop.packprompt": "This will pack all your furniture into storage and close the secret base. Continue?",
@@ -9,7 +9,7 @@
     "entry.treeprompt": "If some vines were cut loose, this tree could be climbed.",
     "entry.caveprompt": "If this boulder were pushed aside, it might reveal a hidden cave.",
     "entry.bushprompt": "If these branches were moved, it might be possible to go inside.",
-    "entry.activateprompt": "Use secret base?",  
+    "entry.activateprompt": "Use Secret Base?",  
     "entry.relocateprompt": "You already have a secret base. Pack up and move?",
 
     "dialogue.y": "Yes",
