Few: Relegated methods from WorldEditor and ModEntry for editing SecretBaseLocations into the SecretBaseLocation class. Removed Core namespace for the sake of brevity. Hole fixing is now handled once per Location, and resets when the owner changes. Removed seasonal loading on a per-tile basis, will replace with per-asset basis later. Clarified the TODO list some.

--- a/SecretBase/i18n/default.json
+++ b/SecretBase/i18n/default.json
@@ -66,6 +66,16 @@
   "laptop.pack_option": "Pack Up",
 
   // ==============================================
+  // HUD Buttons
+  // ==============================================
+
+  // Hover strings
+  "button.mailbox_inspect": "Secret Mailbox",
+  "button.evict_inspect": "Evict guests",
+  "button.lock_inspect": "Lock Secret Base",
+  "button.unlock_inspect": "Unlock Secret Base",
+
+  // ==============================================
   // Secret Mailbox
   // ==============================================
 
